; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/sysdev/xive/extr_native.c_xive_native_has_queue_state_support.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/sysdev/xive/extr_native.c_xive_native_has_queue_state_support.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPAL_XIVE_GET_QUEUE_STATE = common dso_local global i32 0, align 4
@OPAL_XIVE_SET_QUEUE_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xive_native_has_queue_state_support() #0 {
  %1 = load i32, i32* @OPAL_XIVE_GET_QUEUE_STATE, align 4
  %2 = call i64 @opal_check_token(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32, i32* @OPAL_XIVE_SET_QUEUE_STATE, align 4
  %6 = call i64 @opal_check_token(i32 %5)
  %7 = icmp ne i64 %6, 0
  br label %8

8:                                                ; preds = %4, %0
  %9 = phi i1 [ false, %0 ], [ %7, %4 ]
  %10 = zext i1 %9 to i32
  ret i32 %10
}

declare dso_local i64 @opal_check_token(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
